update template to work with rapidapi

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
-API_URL=""
+API_URL="https://dashboard25.p.rapidapi.com/v1/weather/uvi"
+API_KEY=""
 HOME_LATITUDE=""
 HOME_LONGITUDE=""
 LOCAL_OUTPUT_DIR="."
